--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Document</title>
+  <head>
+    <title>Document</title>
 
-        <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-    </head>
-    <body>
-        <script src="elm.js"></script>
-        <script>
-            Elm.Main.init();
-        </script>
-    </body>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <body>
+    <script src="elm.js"></script>
+    <script>
+      Object.defineProperty(HTMLElement.prototype, "___capturePointer", {
+        set(pointerId) {
+          if (pointerId == null) {
+            this.releasePointerCapture(this.___pointerId);
+          } else {
+            this.___pointerId = pointerId;
+            this.setPointerCapture(pointerId);
+          }
+        },
+      });
+      Object.defineProperty(SVGElement.prototype, "___capturePointer", {
+        set(pointerId) {
+          if (pointerId == null) {
+            this.releasePointerCapture(this.___pointerId);
+          } else {
+            this.___pointerId = pointerId;
+            this.setPointerCapture(pointerId);
+          }
+        },
+      });
+      Elm.Main.init();
+    </script>
+  </body>
 </html>
